# ollabridge

./: .env.example  .env.providers.example  .gitignore  .vercelignore  CNAME  CONTRIBUTING.md  Dockerfile  INSTALL.md  MANIFEST.in  Makefile  README.md  UPGRADE_PLAN.md  docker-compose.yml  index.html  pyproject.toml  pyproject.toml.bak  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
assets/: index-D6JWpYM2.js  index-Dl02fBQE.js  index-Xw1iZoKD.css
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_HOSTING.md  AUDIT_ENTERPRISE_READINESS.md  CLI.md  CLOUD.md  CLOUD_SYNC.md  CONFIGURATION.md  DEPLOYMENT_HARDENING.md  ENTERPRISE.md  EXAMPLES.md  HOMEPILOT.md  HOSTING_DECISIONS.md  LOCAL_CATALOG.md  LOCAL_MODELS_UX_DESIGN.md  MCP.md  PRIVACY.md  PROVIDERS_HUB.md  PROVIDER_KEYS.md  QUICKSTART.md  RELAY_VERIFICATION.md  ROADMAP_ENTERPRISE.md  SCALING.md  SECURITY.md  THREAT_MODEL.md  TUTORIAL.md  UX_EXTERNAL_SOURCES.md  UX_MODEL_VISIBILITY.md  UX_PROVIDERS_HUB.md  UX_SOURCES_MODEL.md  index.html  vercel.json
example/: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  TROUBLESHOOTING.md  check-setup.sh  debug-connection.sh  index.html  install-ollabridge.ps1  install-ollabridge.sh  start-services.sh
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/layouts/: SidebarNav.tsx  TopHeader.tsx
frontend/src/lib/: api.ts  hooks.ts  localApi.ts  localHooks.ts
logos/: README.md
notebooks/: .env.example  demo_colab.ipynb  demo_local.ipynb
scripts/: capture_screenshots.py  publish.sh  publish_site.sh  test_providers.py  verify_hf_inference.py
site/: package-lock.json  package.json  vite.config.js
site/assets/: index-CRvCl1yk.css
site/src/: App.jsx  index.css
site/src/components/: CodeWindow.jsx  SiteFooter.jsx  SiteNavbar.jsx
site/src/pages/: Documentation.jsx  Home.jsx
src/ollabridge/: mcp_server.py  model_access.py  provider_ops.py  providers_meta.py
src/ollabridge/addons/: __init__.py
src/ollabridge/api/: __init__.py  auth.py  cloud_routes.py  consumer_nodes.py  main.py  media_routes.py  model_access_routes.py  pair.py  providers_routes.py  relay.py  schemas.py  sources_routes.py  state.py  trace_relay_routes.py  world_state.py
src/ollabridge/cli/: __init__.py  __main__.py  cloud_login.py  doctor.py  main.py  policies.py  providers.py  sync.py  traces.py
src/ollabridge/cloud/: __init__.py  api_client.py  sync_config.py  (+3 more)
tests/: README.md  debug_connector.py  test_local_catalog.py  test_node_multimodal.py  test_node_reconnect.py  test_vr_persona_context.py
tests/enterprise/: conftest.py  test_api_tracing.py  test_cli.py  test_doctor.py  test_model_access.py  test_policies.py  test_providers_meta.py  test_rbac.py  test_redact.py  test_sources_api.py  test_sync_config.py  test_tracing.py
tests/integration/: __init__.py  test_ollama_integration.py
tests/providers/: test_hf_catalog.py  test_huggingface_adapter.py  test_media.py  test_ollama_bridge_failover.py  test_preferences_sync.py  test_providers_routes.py  test_router_credential_gating.py
(+122 files in other folders)
