[project]
name = "ollabridge"
version = "1.0.0"
description = "OllaBridge: self-healing, local-first OpenAI-compatible gateway for Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anyio",
  "fastapi>=0.110",
  "httpx",
  "httpx>=0.26",
  "itsdangerous>=2.1",
  "pydantic-settings",
  "pydantic-settings>=2.2",
  "pydantic>=2.6",
  "python-dotenv",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "rich",
  "rich>=13.7",
  "slowapi",
  "sqlalchemy",
  "sqlmodel",
  "tenacity",
  "tenacity>=8.2",
  "typer",
  "typer>=0.12",
  "uvicorn[standard]>=0.27",
]

[project.scripts]
ollabridge = "ollabridge.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollabridge"]
